--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <body>
 
         <script>
-            console.log("Hello World!")
+            var nome = "Tiago";
+            var idade = 26;
+            var peso = 74.5;
+            var humano = true;
+
+            var alunos = ["Tiago", "Lucas","Amanda"];
+
+            var aluno = {
+                nome: alunos[0],
+                idade: 26,
+                peso: 74.5,
+                humano: true
+            };
+            console.log(alunos[0]);
+            console.log(aluno.nome);
         </script>
     </body>
 </html>
