Aula Operações matemáticas

--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <body>
 
         <script>
-            var nome = "Tiago";
-            var idade = 26;
-            var peso = 74.5;
-            var humano = true;
+            var x = 10, y = 5;
+            
+            var soma = x + y;
+            var subtracao = x - y;
+            var multiplicacao = x * y;
+            var divisao = x / y;
+            var mod = x % y;
 
-            var alunos = ["Tiago", "Lucas","Amanda"];
+            console.log(soma);
+            console.log(subtracao);
+            console.log(multiplicacao);
+            console.log (divisao);
+            console.log(mod);
 
-            var aluno = {
-                nome: alunos[0],
-                idade: 26,
-                peso: 74.5,
-                humano: true
-            };
-            console.log(alunos[0]);
-            console.log(aluno.nome);
+            x += 3;
+            // x = x + 3 
+            console.log(x);
         </script>
     </body>
 </html>
