Aula de Operadores Lógicos

--- a/index.html
+++ b/index.html
@@ -6,30 +6,22 @@
     <body>
 
         <script>
-            function retornaSexo(sexo){
-                // Masculino -> M
-                //Feminino -> F
-                // if (sexo === "M"){
-                //     return "Masculino"
-                // }else if (sexo === "F"){
-                //     return "Feminino"
-                // }else{
-                //     return "Não Informado"
-                // }
+            // AND, OR, NOT
+            // AND &&
+            // OR ||
+            // NOT !
 
-                switch (sexo) {
-                    case "F":
-                        return "Feminino";
-                    case "M":
-                        return "Masculino";
-                    default:
-                        return "Não Informado";
-                }
-            }
+            var sexo = "F";
+            var feminino = sexo === "F";
 
-            var resultado = retornaSexo("F");
+            // if (sexo === "F"){
+            //     feminino = true;
+            // }else{
+            //     feminino = false;
+            // }
 
-            console.log(resultado);
+            console.log(feminino)
+
         </script>
     </body>
 </html>
