Aula de Condição Ternária

--- a/index.html
+++ b/index.html
@@ -6,22 +6,11 @@
     <body>
 
         <script>
-            // AND, OR, NOT
-            // AND &&
-            // OR ||
-            // NOT !
-
             var sexo = "F";
-            var feminino = sexo === "F";
 
-            // if (sexo === "F"){
-            //     feminino = true;
-            // }else{
-            //     feminino = false;
-            // }
+            var retorno = (sexo === "F") ? "Feminino" : "Masculino";
 
-            console.log(feminino)
-
+            console.log(retorno);
         </script>
     </body>
 </html>
