Aula de Estruturas de Repetição

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <body>
 
         <script>
-            var sexo = "F";
+            // for, while
 
-            var retorno = (sexo === "F") ? "Feminino" : "Masculino";
+            // for(var i = 0; i<=100; i++){
+            //     console.log(i);
+            // }
+            
+            var j = 0;
+            while (j <= 100){
+                console.log(j);
 
-            console.log(retorno);
+                j++;
+            }
         </script>
     </body>
 </html>
