Aula de Intervalo e Timeout

--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
     <body>
 
         <script>
-            // for, while
-
-            // for(var i = 0; i<=100; i++){
-            //     console.log(i);
-            // }
-            
-            var j = 0;
-            while (j <= 100){
-                console.log(j);
-
-                j++;
+            function exibe(){
+                console.log("Hello World!");
             }
+
+            setTimeout(exibe, 5000);
         </script>
     </body>
 </html>
