--- a/Mod2.html
+++ b/Mod2.html
@@ -5,12 +5,17 @@
     </head>
     <body>
         <div id="app">
-            <input onkeypress="mostraAlerta()"/>
+            <input type="text" name="nome" />
+            <button class="botao">Adicionar</button>
         </div>
 
         <script>
-            function mostraAlerta(){
-                alert("Hello World!");
+            let inputElement = document.querySelector('input[name=nome]');
+            let btnElement = document.querySelector('button.botao');
+
+            btnElement.onclick = function(){
+                let text = inputElement.value;
+                alert(text);
             }
         </script>
     </body>
