--- a/Mod2.html
+++ b/Mod2.html
@@ -5,18 +5,21 @@
     </head>
     <body>
         <div id="app">
-            <input type="text" name="nome" />
-            <button class="botao">Adicionar</button>
+            
         </div>
 
         <script>
-            let inputElement = document.querySelector('input[name=nome]');
-            let btnElement = document.querySelector('button.botao');
+            let linkElement = document.createElement('a');
 
-            btnElement.onclick = function(){
-                let text = inputElement.value;
-                alert(text);
-            }
+            linkElement.setAttribute('href', 'http://google.com.br');
+
+            let textElement = document.createTextNode('Acessar o Google');
+
+            linkElement.appendChild(textElement);
+
+            let containerElement = document.querySelector('#app');
+
+            containerElement.appendChild(linkElement);
         </script>
     </body>
 </html>
