--- a/Exercícios Mod 2/Exercício1.html
+++ b/Exercícios Mod 2/Exercício1.html
@@ -10,8 +10,8 @@
         <script>
             function createSquare() {
                 let div = document.createElement('div');
-                div.style.width = 100;
-                div.style.height = 100;
+                div.style.width = '100px';
+                div.style.height = '100px';
                 div.style.backgroundColor = '#f00';
 
                 let containerElement = document.querySelector('#app');
