--- a/Mod2.html
+++ b/Mod2.html
@@ -10,8 +10,8 @@
         <script>
             let boxElement = document.querySelector('.box');
 
-            boxElement.style.width = 100;
-            boxElement.style.height = 100;
+            boxElement.style.width = '100px';
+            boxElement.style.height = '100px';
             boxElement.style.backgroundColor = "#f00";
         </script>
     </body>
