--- a/Mod4.html
+++ b/Mod4.html
@@ -7,5 +7,6 @@
         <div id="app">
         </div>
     </body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 </html>
